@@ -1,12 +1,14 @@
 bssm 1.1.6 (Release date: )
 ==============
+   * Cleaned some codes and added lots of tests in line with pkgcheck tests.
    * Fixed a bug in EKF-based particle filter which returned filtered estimates 
      also in place of one-step ahead predictions.
    * Fixed a bug which caused an error in suggest_N for nlg_ssm.
    * Fixed a bug which caused incorrect sampling of smoothing distribution for 
      ar1_lg model when predicting past or when using simulation smoother.
-   * Cleaned some codes and added more comprehensive tests in line with
-     pkgcheck tests.
+   * Fixed a bug which caused an error when predicting past values in 
+     multivariate time series case.
+
 
 bssm 1.1.5 (Release date: 2021-06-14)
 ==============
